fix: spacing between title and body

--- a/src/scss/component-specific.scss
+++ b/src/scss/component-specific.scss
@@ -30,6 +30,10 @@ svg {
 .Success-title {
   color: $pe-color-digital-grass-green;
 }
+.pe-copy {
+  display: block;
+  padding-top: 8px;
+}
 .close-title {
   float: right;
   border: none;
